--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdn.rawgit.com/JDMcKinstry/JavaScriptDateFormat/master/Date.format.min.js"></script>
   </body>
 </html>
